feat:完成AI应用模块的基本开发(CRUD)